css and meta tag

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main page</title>
+
+    <link rel="stylesheet" type="text/css" href="style.css" media=”screen” />
+
+    <meta name="description" content="WebSite of BuppedBirio">
+    <meta name="keywords" content="BuppedBirio PinoBlu Claki Birio">
+    <meta name="author" content="BuppedBirio">
 </head>
 <body>
     <h1>Main page</h1>
