--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main page</title>
 
-    <link rel="stylesheet" type="text/css" href="style.css" media=”screen” />
+    <link rel="stylesheet" type="text/css" href="style.css" />
 
     <meta name="description" content="WebSite of BuppedBirio">
     <meta name="keywords" content="BuppedBirio PinoBlu Claki Birio">
