--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 
     <meta name="description" content="WebSite of BuppedBirio">
-    <meta name="keywords" content="BuppedBirio PinoBlu Claki Birio">
-    <meta name="author" content="BuppedBirio">
+    <meta name="keywords"    content="BuppedBirio PinoBlu Claki Birio">
+    <meta name="author"      content="BuppedBirio">
 
     <link rel="icon" href="Assets/pino.png" type="image/x-icon">
+
+    <meta property="og:url"         content="https://buppedbirio.github.io/">
+    <meta property="og:type"        content="website">
+    <meta property="og:title"       content="BuppedBirio">
+    <meta property="og:description" content="Projects of BuppedBirio">
+    <meta property="og:image"       content="Assets/pino.png">
 </head>
 <body>
     <h1>Main page</h1>
