--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     <meta property="og:type"        content="website">
     <meta property="og:title"       content="BuppedBirio">
     <meta property="og:description" content="Projects of BuppedBirio">
-    <meta property="og:image"       content="Assets/pino.png">
+    <meta property="og:image"       content="https://buppedbirio.github.io/Assets/pino.png">
+    <meta property="og:locale"      content="en_GB">
+    <meta property="og:site_name"   content="BuppedBirio">
 </head>
 <body>
     <h1>Main page</h1>
