--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: http://ogp.me/ns#">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,6 +19,10 @@
     <meta property="og:title"       content="BuppedBirio">
     <meta property="og:description" content="Projects of BuppedBirio">
     <meta property="og:image"       content="https://buppedbirio.github.io/Assets/pino.png">
+    <meta property="og:image:type"  content="image/png">
+    <meta property="og:image:alt"   content="PinoBlu">
+    <meta property="og:image:width" content="29px">
+    <meta property="og:image:height"content="32px">
     <meta property="og:locale"      content="en_GB">
     <meta property="og:site_name"   content="BuppedBirio">
 </head>
