--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <meta property="og:image"       content="https://buppedbirio.github.io/Assets/pino.png">
     <meta property="og:image:type"  content="image/png">
     <meta property="og:image:alt"   content="PinoBlu">
-    <meta property="og:image:width" content="29px">
-    <meta property="og:image:height"content="32px">
+    <meta property="og:image:width" content="290">
+    <meta property="og:image:height"content="320">
     <meta property="og:locale"      content="en_GB">
     <meta property="og:site_name"   content="BuppedBirio">
 </head>
