--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
                 Made by <a href="mailto:rfmariano@protonmail.com">Mariano</a>.<br>
                 Codes on <a href="https://github.com/BuppedBirio/BuppedBirio.github.io">GitHub</a>.<br>
                 Youtube channel of <a href="https://www.youtube.com/c/JustTechh">JustTech</a>.<br>
-                For everything <a href="buppedbirio@gmail.com">send an email</a>!<br>
+                For everything <a href="mailto:buppedbirio@gmail.com">contact us</a>!<br>
             </span>
             <span lang="it">
                 Fatto da <a href="mailto:rfmariano@protonmail.com">Mariano</a>.<br>
                 Codici su <a href="https://github.com/BuppedBirio/BuppedBirio.github.io">GitHub</a>.<br>
                 Canale youtube di <a href="https://www.youtube.com/c/JustTechh">JustTech</a>.<br>
-                Per qualsiasi cosa <a href="buppedbirio@gmail.com">invia una mail</a>!<br>
+                Per qualsiasi cosa <a href="mailto:buppedbirio@gmail.com">contattaci</a>!<br>
             </span>
         </address>
     </footer>
